control de dependencias