@@ -3,7 +3,7 @@ package es.age.dgpe.placsp.risp.parser.uploader;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.util.Scanner;
@@ -18,14 +18,13 @@ public class OAuth2TokenHelper {
      */
     public static String getAccessToken(String tenantId, String clientId, String clientSecret) throws IOException {
         String tokenUrl = "https://login.microsoftonline.com/" + tenantId + "/oauth2/v2.0/token";
-        // Usar el scope de Microsoft Graph para obtener un token válido para Graph API
+        // Usar el scope de Microsoft Graph para obtener un token vÃ¡lido para Graph API
         String data = "client_id=" + URLEncoder.encode(clientId, "UTF-8") +
             "&scope=" + URLEncoder.encode("https://graph.microsoft.com/.default", "UTF-8") +
             "&client_secret=" + URLEncoder.encode(clientSecret, "UTF-8") +
             "&grant_type=client_credentials";
 
-        URL url = new URL(tokenUrl);
-        HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+        HttpURLConnection conn = (HttpURLConnection) URI.create(tokenUrl).toURL().openConnection();
         conn.setRequestMethod("POST");
         conn.setDoOutput(true);
         conn.setRequestProperty("Content-Type", "application/x-www-form-urlencoded");
@@ -34,7 +33,10 @@ public class OAuth2TokenHelper {
         }
         int responseCode = conn.getResponseCode();
         if (responseCode == 200) {
-            String response = new Scanner(conn.getInputStream(), "UTF-8").useDelimiter("\\A").next();
+            String response;
+            try (Scanner scanner = new Scanner(conn.getInputStream(), "UTF-8").useDelimiter("\\A")) {
+                response = scanner.next();
+            }
             int i = response.indexOf("\"access_token\":\"");
             if (i != -1) {
                 i += 16;
@@ -43,8 +45,10 @@ public class OAuth2TokenHelper {
                 return token;
             }
         } else {
-            String error = new Scanner(conn.getErrorStream(), "UTF-8").useDelimiter("\\A").next();
-            System.err.println("Error obteniendo token: " + error);
+            try (Scanner scanner = new Scanner(conn.getErrorStream(), "UTF-8").useDelimiter("\\A")) {
+                String error = scanner.next();
+                System.err.println("Error obteniendo token: " + error);
+            }
         }
         return null;
     }
